// Copyright 2020-2021 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.alpha.module.v1alpha1;

import "google/protobuf/timestamp.proto";

// Module is a module.
message Module {
  // files are the files that make up the set.
  //
  // Sorted by path.
  // Path must be unique.
  // Only the target files. No imports.
  //
  // Maximum total size of all content: 32MB.
  repeated ModuleFile files = 1;
  // dependencies are the dependencies.
  repeated ModulePin dependencies = 2;
  // documentation is the string representation of the contents of the `buf.md` file.
  //
  // string is used to enforce UTF-8 encoding or 7-bit ASCII text.
  string documentation = 3;
  // breaking_config is the breaking change detection configuration set for the module.
  BreakingConfigV1 breaking_config = 5;
  // lint_config is the lint configuration set for the module.
  LintConfigV1 lint_config = 6;
}

// ModuleFile is a file within a FileSet.
message ModuleFile {
  // path is the relative path of the file.
  // Path can only use '/' as the separator character, and includes no ".." components.
  string path = 1;
  // content is the content of the file.
  bytes content = 2;
}

// ModulePin is a module pin.
message ModulePin {
  string remote = 1;
  string owner = 2;
  string repository = 3;
  string branch = 4;
  string commit = 5;
  string digest = 6;
  google.protobuf.Timestamp create_time = 7;
}

// BreakingConfigV1 represents the v1 breaking change detection configuration.
message BreakingConfigV1 {
  repeated string use = 1;
  repeated string except = 2;
  repeated string ignore = 3;
  repeated IgnoreOnly ignore_only = 4;
  bool ignore_unstable_packages = 5;
}

// LintConfigV1 represents the v1 lint configuration.
message LintConfigV1 {
  repeated string use = 1;
  repeated string except = 2;
  repeated string ignore = 3;
  repeated IgnoreOnly ignore_only = 4;
  string enum_zero_value_suffix = 5;
  bool rpc_allow_google_protobuf_empty_requests = 6;
  bool rpc_allow_google_protobuf_empty_responses = 7;
  string service_suffix = 8;
  bool allow_comment_ignores = 9;
}

// IgnoreOnly represents a check ID and the paths that are ignored for the check.
message IgnoreOnly {
  string id = 1;
  repeated string paths = 2;
}

// ModuleReference is a module reference.
message ModuleReference {
  string remote = 1;
  string owner = 2;
  string repository = 3;
  // either branch, tag, or commit
  string reference = 4;
}
